# discovery

./: .gitignore  build.sh  build_and_print.sh  bun.lockb  deploy.sh  dev.sh  mkdocs.yml  package.json  playwright.config.js  post_process.py  print.py  print_pdf.py  pyproject.toml  readme.md  test.sh  todo.md
docs/: bozi-rodina.md  discovery-jak-zacit.md  discovery.md  index.md  jak-zacit-discovery.md  style.css  tema-02.md  texty-ke-cteni.md
docs/javascripts/: main.js
docs/js/: swipe-tabs.js
docs/stylesheets/: style.css
html/: discovery.html  tema-02.html
icons/: search-icon.afdesign
src/common/docs/stylesheets/: print.css  style.css
src/common/stylesheets/: print.css  style.css
src/discovery/: mkdocs.yml
src/discovery/docs/: index.md  jak-zacit-discovery-print.md  jak-zacit-discovery.md  karticky-k-tisku.md  texty-ke-cteni.md
src/discovery/docs/javascripts/: main.js
src/discovery/docs/stylesheets/: print.css  style.css
src/discovery/overrides/partials/integrations/: analytics.html
src/krokysjezisem/: mkdocs.yml
src/krokysjezisem/docs/: index.md  karticky-k-tisku.md  posileni-vize.md  site.webmanifest  stylesheets  tipy-pro-posileni-vize.md
src/krokysjezisem/docs/javascripts/: main.js
src/krokysjezisem/docs/stylesheets/: print.css  style.css
src/krokysjezisem/overrides/: icons
tests/: discovery.spec.js  krokysjezisem.spec.js
