[project]
name = "discovery-app"
version = "0.1.0"
description = "Discovery app"
authors = [
    { name = "Daniel Vopalecky", email = "daniel.vopalecky@gmail.com" }
]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.17",
    "pymdown-extensions>=10.7.1",
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "beautifulsoup4>=4.12.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/discovery_app"]
